--- a/portfolio.html
+++ b/portfolio.html
@@ -218,15 +218,15 @@
             <div class="project-card">
                 <div class="project-content">
                     <div class="card-front">
-                        <img src="images/project-2.jpg" alt="Project 1" class="project-img">
-                        <h3 class="project-title">1. Project Name</h3>
+                        <img src="images/project-1.png" alt="Project 1" class="project-img">
+                        <h3 class="project-title">1. Sorting Algorithm Visualizer</h3>
                     </div>
                     <div class="card-back">
-                        <h3 class="project-title">Project Name</h3>
-                        <p class="project-description">Description of the project</p>
+                        <h3 class="project-title back">Sorting Algorithm Visualizer</h3>
+                        <p class="project-description">The Sorting Algorithm Visualizer is an interactive platform that visually demonstrates sorting algorithms like Bubble Sort, Merge Sort, and Quick Sort. With dynamic animations, it helps users understand time complexity and algorithm efficiency.</p>
                         <div class="project-buttons">
-                            <button class="project-btn live-btn">View Live</button>
-                            <button class="project-btn github-btn">GitHub</button>
+                            <a class="project-btn live-btn" href="https://sorting-algorithm-representation.netlify.app/" target="_blank">View Live</a>
+                            <a class="project-btn github-btn" href="https://github.com/archit-417/Sorting-Algorithm-Visualizer" target="_blank">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -236,14 +236,14 @@
                 <div class="project-content">
                     <div class="card-front">
                         <img src="images/project-2.jpg" alt="Project 2" class="project-img">
-                        <h3 class="project-title">2. Project Name</h3>
+                        <h3 class="project-title">2. Career Guidance Website</h3>
                     </div>
                     <div class="card-back">
-                        <h3 class="project-title">Project Name</h3>
+                        <h3 class="project-title back">Career Guidance Website</h3>
                         <p class="project-description">Description of the project</p>
                         <div class="project-buttons">
-                            <button class="project-btn live-btn">View Live</button>
-                            <button class="project-btn github-btn">GitHub</button>
+                            <a class="project-btn live-btn" href="#" target="_blank">View Live</a>
+                            <a class="project-btn github-btn" href="#" target="_blank">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -256,11 +256,11 @@
                         <h3 class="project-title">3. Project Name</h3>
                     </div>
                     <div class="card-back">
-                        <h3 class="project-title">Project Name</h3>
+                        <h3 class="project-title back">Project Name</h3>
                         <p class="project-description">Description of the project</p>
                         <div class="project-buttons">
-                            <button class="project-btn live-btn">View Live</button>
-                            <button class="project-btn github-btn">GitHub</button>
+                            <a class="project-btn live-btn" href="#" target="_blank">View Live</a>
+                            <a class="project-btn github-btn" href="#" target="_blank">GitHub</a>
                         </div>
                     </div>
                 </div>
