--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="nav-container">
         <div class="nav-content">
             <div class="logo">
-                <a href="#home"><img src="images/logo.png" alt=""></a>
+                <a href="https://drive.google.com/file/d/1Catj_Nuqx_VTTqEFOCn7KxuHityzW6v_/view?usp=sharing" target="_blank"><img src="images/logo.png" alt=""></a>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
