--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
                         </a>
                     </div>
                 </div>
-            <a href="#projects" class="button">Check out my work!</a>
+                <div class="hero-buttons">
+                    <a href="#projects" class="button">Check out my work!</a>
+                    <a href="https://drive.google.com/file/d/1Catj_Nuqx_VTTqEFOCn7KxuHityzW6v_/view?usp=sharing" target="_blank" class="button">Get Resume</a>
+                </div>
             </div>
             
             <div class="hero-img">
