Added new leetcode icon.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                         <a href="mailto:architsrivastava417@gmail.com">
                             <i class="fa-solid fa-envelope"></i>
                         </a>
+                        <a href="https://leetcode.com/u/ArchitSrivastava/" target="_blank">
+                            <i class="fa-solid fa-laptop-code"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="hero-buttons">
@@ -315,7 +318,7 @@
         <div class="contact-details">
             <div class="contact-description">
                 <p>I'm currently looking for new opportunities. My inbox is always open.</p>
-                <p><i class="fa-duotone fa-solid fa-phone"></i> +918707596069</p>
+                <p><i class="fa-brands fa-whatsapp" style="font-weight: 600;"></i> +918707596069</p>
                 <p><i class="fa-solid fa-at"></i> architsrivastava417@gmail.com</p>
                 
             </div>
