Made changes in projects.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <!-- Add GSAP for advanced animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <!-- Add Three.js for background effects -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    
     <!-- Add Fontawesome to add fonts directly -->
     <script src="https://kit.fontawesome.com/e906fb3fd7.js" crossorigin="anonymous"></script>
 
@@ -39,8 +38,6 @@
     <div class="loading-screen">
         <div class="loader"></div>
     </div>
-
-    <div class="custom-cursor"></div>
 
     <nav class="nav-container">
         <div class="nav-content">
@@ -240,6 +237,7 @@
     <!-- Project Section -->
     <section id="projects" class="projects">
         <h2 class="section-title">Projects</h2>
+        <p class="project-help">Click cards for more details!</p>
         <div class="projects-grid">
             <!-- Project cards would be dynamically inserted here -->
             <div class="project-card">
@@ -263,13 +261,13 @@
                 <div class="project-content">
                     <div class="card-front">
                         <img src="images/abstractify.png" alt="Project 2" class="project-img">
-                        <h3 class="project-title">2. Abstractify: AI-Driven Paper Summarizer</h3>
+                        <h3 class="project-title">2. Abstractify: Paper Summarizer</h3>
                     </div>
                     <div class="card-back">
-                        <h3 class="project-title back">Abstractify: AI-Driven Paper Summarizer</h3>
-                        <p class="project-description">Description of the project</p>
+                        <h3 class="project-title back">Abstractify: Research Paper Summarizer</h3>
+                        <p class="project-description">Abstractify is a smart research paper summarization tool leveraging Hugging Face API and NLP to extract key insights from research papers. It simplifies complex content into concise, easy-to-read summaries, enhancing research accessibility.</p>
                         <div class="project-buttons">
-                            <a class="project-btn live-btn" href="https://research-paper-summary.netlify.app/" target="_blank">View Live</a>
+                            <a class="project-btn live-btn" href="https://abstractify-ykdn.onrender.com/" target="_blank">View Live</a>
                             <a class="project-btn github-btn" href="https://github.com/archit-417/Research-Paper-Summarizer" target="_blank">GitHub</a>
                         </div>
                     </div>
