Updated projects section.

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <h3 class="project-title back">Abstractify: Research Paper Summarizer</h3>
                         <p class="project-description">Abstractify is a smart research paper summarization tool leveraging Hugging Face API and NLP to extract key insights from research papers. It simplifies complex content into concise, easy-to-read summaries, enhancing research accessibility.</p>
                         <div class="project-buttons">
-                            <a class="project-btn live-btn" href="https://abstractify-ykdn.onrender.com/" target="_blank">View Live</a>
+                            <a class="project-btn live-btn" href="https://abstractifyai.netlify.app/" target="_blank">View Live</a>
                             <a class="project-btn github-btn" href="https://github.com/archit-417/Research-Paper-Summarizer" target="_blank">GitHub</a>
                         </div>
                     </div>
