Modified about content

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 <h2 class="about-title">About Me</h2>
                 <div class="about-description">
                     <p class="about-paragraph">
-                        I’m Archit Srivastava, an experienced full-stack developer with passion for AI development, web development and Java development. <br>
+                        I’m Archit Srivastava, an experienced full-stack developer with passion for AI development, Web development and Java development. <br>
                         I’ve built innovative team as well as solo projects like <strong>SortIT</strong>, <strong>Abstractify</strong>, 
-                        and a <strong>Online Code Editor.</strong> 
+                        and <strong>CodeSide.</strong> 
                         With all the skills and experience that I've had, I thrive at the intersection of technology and impact. <br><span>Learn more about me below.</span>
                     </p>
                     
