Modified project description.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         <h3 class="project-title back">SortIT: Sorting Algorithm Visualizer</h3>
                         <p class="project-description">SortIt is a Sorting Algorithm Visualizer tool which is an 
                             interactive platform that visually demonstrates sorting algorithms like Bubble Sort, 
-                            Merge Sort, and Quick Sort. With dynamic animations, it helps users understand 
+                            Merge Sort and Quick Sort. With dynamic animations, it helps users understand 
                             time complexity and algorithm efficiency.</p>
                         <div class="project-buttons">
                             <a class="project-btn live-btn" href="https://sortit-algorithm-visualizer.netlify.app/" target="_blank">View Live</a>
@@ -287,8 +287,7 @@
                     </div>
                     <div class="card-back">
                         <h3 class="project-title back">CodeSide: Online Code Editor</h3>
-                        <p class="project-description">The Online Code Editor is a web-based platform, 
-                            allowing users to write, edit, and preview HTML, CSS, and JavaScript in real time. 
+                        <p class="project-description">CodeSide is a web-based code editing platform, allowing users to write, edit and preview HTML, CSS and JavaScript in real time. 
                             With features like live rendering, syntax highlighting, and auto-completion, 
                             it streamlines web development for students, developers, and designers.</p>
                         <div class="project-buttons">
