Modified projects description.

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <h3 class="project-title back">CodeSide: Online Code Editor</h3>
                         <p class="project-description">CodeSide is a web-based code editing platform, allowing users to write, edit and preview HTML, CSS and JavaScript in real time. 
                             With features like live rendering, syntax highlighting, and auto-completion, 
-                            it streamlines web development for students, developers, and designers.</p>
+                            it streamlines web development for students, developers and designers.</p>
                         <div class="project-buttons">
                             <a class="project-btn live-btn" href="https://codeside.netlify.app/" target="_blank">View Live</a>
                             <a class="project-btn github-btn" href="https://github.com/archit-417/Online-Code-Editor" target="_blank">GitHub</a>
