Modified hero image.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             
             <div class="hero-img">
-                <img src="images/hero-image.png" alt="Hero Image">
+                <img src="images/hero-test.png" alt="Hero Image">
             </div>
         </div>
     </section>
@@ -179,15 +179,7 @@
                 <div class="layer">                    
                     <div class="skill-tag">
                         <img src="icons/react.png" alt="react-logo">
-                        <p>ReactJS</p>
-                    </div>
-                    <div class="skill-tag">
-                        <img src="icons/nodejs.png" alt="node-logo">
-                        <p>NodeJS</p>
-                    </div>
-                    <div class="skill-tag">
-                        <img src="icons/express.png" class="iconimg" alt="express-logo">
-                        <p>ExpressJS</p>
+                        <p>React.js</p>
                     </div>
                     <div class="skill-tag">
                         <img src="icons/spring.png" alt="spring-logo">
