Modified hero image.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             
             <div class="hero-img">
-                <img src="images/hero-test.png" alt="Hero Image">
+                <img src="images/hero-image.png" alt="Hero Image">
             </div>
         </div>
     </section>
