--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- Project Section -->
     <section id="projects" class="projects">
         <h2 class="section-title">Projects</h2>
-        <p class="project-help">Click cards for more details!</p>
+        <p class="project-help vibrating">Click on cards for more details!</p>
         <div class="projects-grid">
             <!-- Project cards would be dynamically inserted here -->
             <div class="project-card">
