Modified contact section.

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <p>Big ideas often start with a simple message. Click on the number below and feel free to reach out!
                 </p>
                 <p class="details copyable"><i class="fa-brands fa-whatsapp" style="font-weight: 600;"></i>+918707596069</p>
-                <a class = "details" href="mailto:architsrivastava417@gmail.com"><p><i class="fa-solid fa-at"></i> architsrivastava417@gmail.com</p></a>
+                <p class="details" onclick="openMail()"><i class="fa-solid fa-at"></i> architsrivastava417@gmail.com</p>
 
             </div>
 
