Modified certificate links.

--- a/index.html
+++ b/index.html
@@ -142,15 +142,9 @@
 
                         <div class="tab-contents active-tab" id="certifications">
                             <ul>
-                                <li><span>2023</span><br><a
-                                        href="https://drive.google.com/file/d/1j0avlt6bcKSjQLZUD6Gd2-SkvRo7hm1L/view?usp=sharing"
-                                        target="_blank">AWS Community - Frontend Development Bootcamp</a></li>
-                                <li><span>2023</span><br><a
-                                        href="https://drive.google.com/file/d/131Ztn2bqeQ2MmqybBK6_rjmHchKUpi_p/view?usp=sharing"
-                                        target="_blank">GDSC KIIT Chapter - Backend Development Bootcamp</a></li>
-                                <li><span>2024</span><br><a
-                                        href="https://drive.google.com/file/d/1QsvwrVCS1OASXpZRouVjehg9RVi9RHqD/view?usp=sharing"
-                                        target="_blank">Wipro Talentnext - Java Development Program</a></li>
+                                <li class ="certficates" onclick="openCertificates(1)"><span>2023</span><br>AWS Community - Frontend Development Bootcamp</li>
+                                <li class ="certficates" onclick="openCertificates(2)"><span>2023</span><br>GDSC KIIT Chapter - Backend Development Bootcamp</li>
+                                <li class ="certficates" onclick="openCertificates(3)"><span>2024</span><br>Wipro Talentnext - Java Development Program</li>
                             </ul>
                         </div>
 
