Made some styling changes.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 </div>
             </div>
 
-            <div class="hero-img floating">
-                <img src="images/hero-image.png" alt="Hero Image">
+            <div class="hero-img-container">
+                <img class="hero-img floating" src="images/hero-image.png" alt="Hero Image">
             </div>
         </div>
         <div class="hero-img-mobile floating">
